@@ -1,4 +1,5 @@
 package net.sourceforge.jsocks;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -16,7 +17,7 @@ import java.util.Hashtable;
 public class Socks5Proxy extends Proxy implements Cloneable{
 
 //Data members
-   private Hashtable<Integer, Authentication> authMethods = new Hashtable<Integer, Authentication>();
+   private Hashtable authMethods = new Hashtable();
    private int selectedMethod;
 
    boolean resolveAddrLocally = true;
@@ -28,17 +29,41 @@ public class Socks5Proxy extends Proxy implements Cloneable{
 
    /**
      Creates SOCKS5 proxy.
+     @param p Proxy to use to connect to this proxy, allows proxy chaining.
+     @param proxyHost Host on which a Proxy server runs.
+     @param proxyPort Port on which a Proxy server listens for connections.
+     @throws UnknownHostException If proxyHost can't be resolved.
+   */
+   public Socks5Proxy(Proxy p,String proxyHost,int proxyPort)
+          throws UnknownHostException{
+      super(p,proxyHost,proxyPort);
+      version = 5;
+      setAuthenticationMethod(0,new AuthenticationNone());
+   }
+
+   /**
+     Creates SOCKS5 proxy.
      @param proxyHost Host on which a Proxy server runs.
      @param proxyPort Port on which a Proxy server listens for connections.
      @throws UnknownHostException If proxyHost can't be resolved.
    */
    public Socks5Proxy(String proxyHost,int proxyPort)
           throws UnknownHostException{
-      super(proxyHost,proxyPort);
+      this(null,proxyHost,proxyPort);
+   }
+
+
+   /**
+     Creates SOCKS5 proxy.
+     @param p Proxy to use to connect to this proxy, allows proxy chaining.
+     @param proxyIP Host on which a Proxy server runs.
+     @param proxyPort Port on which a Proxy server listens for connections.
+   */
+   public Socks5Proxy(Proxy p,InetAddress proxyIP,int proxyPort){
+      super(p,proxyIP,proxyPort);
       version = 5;
       setAuthenticationMethod(0,new AuthenticationNone());
    }
-
 
    /**
      Creates SOCKS5 proxy.
@@ -46,14 +71,18 @@ public class Socks5Proxy extends Proxy implements Cloneable{
      @param proxyPort Port on which a Proxy server listens for connections.
    */
    public Socks5Proxy(InetAddress proxyIP,int proxyPort){
-      super(proxyIP,proxyPort);
-      version = 5;
-      setAuthenticationMethod(0,new AuthenticationNone());
+      this(null,proxyIP,proxyPort);
    }
-
 
 //Public instance methods
 //========================
+
+  /**
+     set the local socket port
+   */
+  public void setLocalSocketPort(int portNum) {
+    this.localSocketPort = portNum;
+  }
 
 
    /**
@@ -91,9 +120,9 @@ public class Socks5Proxy extends Proxy implements Cloneable{
           return false;
       if(method == null){
         //Want to remove a particular method
-	return (authMethods.remove(Integer.valueOf(methodId)) != null);
+	return (authMethods.remove(new Integer(methodId)) != null);
       }else{//Add the method, or rewrite old one
-	authMethods.put(Integer.valueOf(methodId),method);
+	authMethods.put(new Integer(methodId),method);
       }
       return true;
    }
@@ -104,7 +133,7 @@ public class Socks5Proxy extends Proxy implements Cloneable{
     @return Implementation for given method or null, if one was not set.
    */
    public Authentication getAuthenticationMethod(int methodId){
-      Object method = authMethods.get(Integer.valueOf(methodId));
+      Object method = authMethods.get(new Integer(methodId));
       if(method == null) return null;
       return (Authentication)method;
    }
@@ -113,10 +142,10 @@ public class Socks5Proxy extends Proxy implements Cloneable{
     Creates a clone of this Proxy.
    */
    @Override
-@SuppressWarnings("unchecked")
 public Object clone(){
       Socks5Proxy newProxy = new Socks5Proxy(proxyIP,proxyPort);
-      newProxy.authMethods = (Hashtable<Integer, Authentication>) this.authMethods.clone();
+      newProxy.authMethods = (Hashtable) this.authMethods.clone();
+      newProxy.directHosts = (InetRange)directHosts.clone();
       newProxy.resolveAddrLocally = resolveAddrLocally;
       newProxy.chainProxy = chainProxy;
       return newProxy;
@@ -133,8 +162,10 @@ public Object clone(){
 protected Proxy copy(){
        Socks5Proxy copy = new Socks5Proxy(proxyIP,proxyPort);
        copy.authMethods = this.authMethods; //same Hash, no copy
+       copy.directHosts = this.directHosts;
        copy.chainProxy = this.chainProxy;
        copy.resolveAddrLocally = this.resolveAddrLocally;
+       copy.localSocketPort = this.localSocketPort;
        return copy;
     }
    /**
@@ -148,70 +179,69 @@ protected void startSession()throws SocksException{
       Socket ps = proxySocket; //The name is too long
 
       try{
+        byte nMethods = (byte) authMethods.size();  //Number of methods
 
-	 byte nMethods = (byte) authMethods.size();  //Number of methods
+        byte[] buf = new byte[2+nMethods]; //2 is for VER,NMETHODS
+        buf[0] = (byte) version;
+        buf[1] = nMethods;                 //Number of methods
+        int i=2;
 
-         byte[] buf = new byte[2+nMethods]; //2 is for VER,NMETHODS
-         buf[0] = (byte) version;
-         buf[1] = nMethods;                 //Number of methods
-         int i=2;
+        Enumeration ids = authMethods.keys();
+        while(ids.hasMoreElements())
+          buf[i++] = (byte)((Integer)ids.nextElement()).intValue();
 
-         Enumeration<Integer> ids = authMethods.keys();
-         while(ids.hasMoreElements())
-            buf[i++] = (byte)ids.nextElement().intValue();
+        out.write(buf);
+        out.flush();
 
-         out.write(buf);
-         out.flush();
+        int versionNumber  = in.read();
+        selectedMethod = in.read();
 
-         int versionNumber  = in.read();
-         selectedMethod = in.read();
+        if(versionNumber < 0 || selectedMethod < 0){
+          //EOF condition was reached
+          endSession();
+          throw(new SocksException(SOCKS_PROXY_IO_ERROR,
+          "Connection to proxy lost."));
+        }
+        if(versionNumber < version){
+          //What should we do??
+        }
+        if(selectedMethod == 0xFF){ //No method selected
+          ps.close();
+          throw ( new SocksException(SOCKS_AUTH_NOT_SUPPORTED));
+        }
 
-         if(versionNumber < 0 || selectedMethod < 0){
-           //EOF condition was reached
-           endSession();
-           throw(new SocksException(SOCKS_PROXY_IO_ERROR,
-                 "Connection to proxy lost."));
-         }
-         if(versionNumber < version){
-           //What should we do??
-         }
-         if(selectedMethod == 0xFF){ //No method selected
-            ps.close();
-            throw ( new SocksException(SOCKS_AUTH_NOT_SUPPORTED));
-         }
+        auth = getAuthenticationMethod(selectedMethod);
+        if(auth == null){
+          //This shouldn't happen, unless method was removed by other
+          //thread, or the server stuffed up
+          throw(new SocksException(SOCKS_JUST_ERROR,
+          "Speciefied Authentication not found!"));
+        }
+        Object[] in_out = auth.doSocksAuthentication(selectedMethod,ps);
+        if(in_out == null){
+          //Authentication failed by some reason
+          throw(new SocksException(SOCKS_AUTH_FAILURE));
+        }
+        //Most authentication methods are expected to return
+        //simply the input/output streams associated with
+        //the socket. However if the auth. method requires
+        //some kind of encryption/decryption being done on the
+        //connection it should provide classes to handle I/O.
 
-         auth = getAuthenticationMethod(selectedMethod);
-         if(auth == null){
-            //This shouldn't happen, unless method was removed by other
-            //thread, or the server stuffed up
-            throw(new SocksException(SOCKS_JUST_ERROR,
-                      "Speciefied Authentication not found!"));
-         }
-         Object[] in_out = auth.doSocksAuthentication(selectedMethod,ps);
-         if(in_out == null){
-            //Authentication failed by some reason
-            throw(new SocksException(SOCKS_AUTH_FAILURE));
-         }
-         //Most authentication methods are expected to return
-         //simply the input/output streams associated with
-         //the socket. However if the auth. method requires
-         //some kind of encryption/decryption being done on the
-         //connection it should provide classes to handle I/O.
-
-         in = (InputStream) in_out[0];
-         out = (OutputStream) in_out[1];
-         if(in_out.length > 2)
-            udp_encapsulation = (UDPEncapsulation) in_out[2];
+        in = (InputStream) in_out[0];
+        out = (OutputStream) in_out[1];
+        if(in_out.length > 2)
+          udp_encapsulation = (UDPEncapsulation) in_out[2];
 
       }catch(SocksException s_ex){
-         throw s_ex;
+        throw s_ex;
       }catch(UnknownHostException uh_ex){
-         throw(new SocksException(SOCKS_PROXY_NO_CONNECT));
+        throw(new SocksException(SOCKS_PROXY_NO_CONNECT));
       }catch(SocketException so_ex){
-         throw(new SocksException(SOCKS_PROXY_NO_CONNECT));
+        throw(new SocksException(SOCKS_PROXY_NO_CONNECT));
       }catch(IOException io_ex){
-         //System.err.println(io_ex);
-         throw(new SocksException(SOCKS_PROXY_IO_ERROR,""+io_ex));
+        //System.err.println(io_ex);
+        throw(new SocksException(SOCKS_PROXY_IO_ERROR,""+io_ex));
       }
    }
 
